--- a/laundry/appsettings.json
+++ b/laundry/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"TimeSlotContext": "Data Source=Data/TimeSlotContext-d5a06341.db", // local connection string
+    "TimeSlotContext": "Data Source=.\\Data\\TimeSlotContext-d5a06341.db" //azure connection string
+  }
 }
