--- a/laundry/appsettings.json
+++ b/laundry/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"TimeSlotContext": "Data Source=Data/TimeSlotContext-d5a06341.db", // local connection string
-    "TimeSlotContext": "Data Source=.\\Data\\TimeSlotContext-d5a06341.db" //azure connection string
+    "TimeSlotContext": "Data Source=Data/TimeSlotContext-d5a06341.db", // local connection string
+    //"TimeSlotContext": "Data Source=.\\Data\\TimeSlotContext-d5a06341.db" //in-azure config connection string
   }
 }
